<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NovaBiljkaActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/slikaIV"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/picture"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nazivET"
            app:layout_constraintBottom_toTopOf="@+id/medicinskoUpozorenjeET"
            />
        <EditText
            android:id="@+id/nazivET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/porodicaET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaIV"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/plant_name"/>
        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/jeloET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaIV"
            app:layout_constraintTop_toBottomOf="@+id/nazivET"
            android:hint="@string/plant_family"/>
        <EditText
            android:id="@+id/jeloET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/medicinskoUpozorenjeET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaIV"
            app:layout_constraintTop_toBottomOf="@+id/porodicaET"
            android:hint="@string/meal"/>
        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/jCL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jeloET"
            android:hint="@string/medical_warning"/>
        <!--JELA-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/jCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/medicinskoUpozorenjeET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mkCL">
            <TextView
                android:id="@+id/jTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/meals"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/jelaLV"/>
            <ListView
                android:id="@+id/jelaLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--MEDICINSKA KORIST-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mkCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/jCL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ktCL">
            <TextView
                android:id="@+id/mkTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/medical_usage"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/medicinskaKoristLV"/>
            <ListView
                android:id="@+id/medicinskaKoristLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mkTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--KLIMATSKI TIP-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ktCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mkCL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ztCL">
            <TextView
                android:id="@+id/ktTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/climate_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/klimatskiTipLV"/>
            <ListView
                android:id="@+id/klimatskiTipLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ktTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--ZEMLJISNI TIP-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ztCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ktCL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/poCL">
            <TextView
                android:id="@+id/ztTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/soil_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/zemljisniTipLV"/>
            <ListView
                android:id="@+id/zemljisniTipLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ztTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--PROFIL OKUSA-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/poCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ztCL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttons">
            <TextView
                android:id="@+id/poTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/taste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/profilOkusaLV"/>
            <ListView
                android:id="@+id/profilOkusaLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poCL">

            <Button
                android:id="@+id/dodajJeloBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/add_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dodajBiljkuBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/add_plant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/uslikajBiljkuBtn"
                app:layout_constraintStart_toEndOf="@+id/dodajJeloBtn"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/take_a_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dodajBiljkuBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>